fix: fix display of contribution table on display page and improve contrast of its buttons (ZNTA-1650)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -3161,6 +3161,10 @@ select[multiple].input-group-sm > .form-control, select[multiple].input-group-sm
   color: @brand-primary;
 }
 
+.activity-graph .StretchedBox {
+  position:relative !important;
+}
+
 .activity-graph .calDate {
   font-size: 0.833rem !important;
   padding-top: 0.1875rem;
@@ -3199,7 +3203,7 @@ button.success.btn.btn-default, button.plain.btn.btn-default, button.primary.btn
 
 button.plain.btn.btn-default:focus, button.plain.btn.btn-default:hover,
 button.plain.btn.btn-default.active {
-  background-color: rgba(84, 102, 119, 0.85);
+  background-color: rgba(84, 102, 119, 0.95);
   color: #fff;
   text-decoration: none;
   outline: 0;
@@ -3208,7 +3212,7 @@ button.plain.btn.btn-default.active {
 
 button.primary.btn.btn-default:focus, button.primary.btn.btn-default:hover,
 button.primary.btn.btn-default.active {
-  background-color: rgba(3, 166, 215, 0.85);
+  background-color: rgba(3, 166, 215, 0.95);
   color: #fff;
   text-decoration: none;
   outline: 0;
@@ -3217,7 +3221,7 @@ button.primary.btn.btn-default.active {
 
 button.success.btn.btn-default:focus, button.success.btn.btn-default:hover,
 button.success.btn.btn-default.active {
-  background-color: rgba(98, 200, 118, 0.85);
+  background-color: rgba(98, 200, 118, 0.95);
   color: #fff;
   text-decoration: none;
   outline: 0;
@@ -3226,7 +3230,7 @@ button.success.btn.btn-default.active {
 
 button.unsure.btn.btn-default:focus, button.unsure.btn.btn-default:hover,
 button.unsure.btn.btn-default.active {
-  background-color: rgba(233, 221, 0, 0.95);
+  background-color: rgba(233, 221, 0, 1);
   color: #fff;
   text-decoration: none;
   outline: 0;
